@@ -1,4 +1,4 @@
- /******************************************************************************
+/******************************************************************************
  * NOTICE                                                                     *
  *                                                                            *
  * This software (or technical data) was produced for the U.S. Government     *
@@ -26,6 +26,7 @@
 package org.mitre.mpf.wfm.service;
 
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.junit.Before;
 import org.junit.Test;
@@ -33,22 +34,22 @@ import org.mitre.mpf.nms.MasterNode;
 import org.mitre.mpf.nms.streaming.messages.LaunchStreamingJobMessage;
 import org.mitre.mpf.nms.streaming.messages.StopStreamingJobMessage;
 import org.mitre.mpf.rest.api.node.EnvironmentVariableModel;
-import org.mitre.mpf.wfm.data.entities.transients.*;
-import org.mitre.mpf.wfm.enums.ActionType;
+import org.mitre.mpf.rest.api.pipelines.*;
+import org.mitre.mpf.wfm.data.entities.persistent.JobPipelineElements;
+import org.mitre.mpf.wfm.data.entities.persistent.MediaStreamInfo;
+import org.mitre.mpf.wfm.data.entities.persistent.StreamingJobImpl;
+import org.mitre.mpf.wfm.enums.MediaType;
 import org.mitre.mpf.wfm.enums.StreamingEndpoints;
-import org.mitre.mpf.wfm.pipeline.xml.AlgorithmDefinition;
-import org.mitre.mpf.wfm.pipeline.xml.PropertyDefinition;
-import org.mitre.mpf.wfm.pipeline.xml.ValueType;
 import org.mitre.mpf.wfm.service.component.ComponentLanguage;
+import org.mitre.mpf.wfm.util.AggregateJobPropertiesUtil;
 import org.mitre.mpf.wfm.util.PropertiesUtil;
 import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.verify;
@@ -57,157 +58,180 @@ import static org.mockito.Mockito.when;
 
 public class TestStreamingJobMessageSender {
 
-	@InjectMocks
-	private StreamingJobMessageSenderImpl _messageSender;
+    private StreamingJobMessageSenderImpl _messageSender;
 
-	@Mock
-	private PropertiesUtil _mockProperties;
+    @Mock
+    private PropertiesUtil _mockProperties;
 
-	@Mock
-	private MasterNode _mockMasterNode;
+    @Mock
+    private MasterNode _mockMasterNode;
 
-	@Mock
-	private PipelineService _mockPipelineService;
+    @Mock
+    private StreamingServiceManager _mockServiceManager;
 
-	@Mock
-	private StreamingServiceManager _mockServiceManager;
-
-
-	@Before
-	public void init() {
-		MockitoAnnotations.initMocks(this);
-	}
+    @Mock
+    private WorkflowPropertyService _mockWorkflowPropertyService;
 
 
-	@Test
-	public void testLaunch() {
-		long stallAlertThreshold = 234;
-		when(_mockProperties.getStreamingJobStallAlertThreshold())
-				.thenReturn(stallAlertThreshold);
-
-		String activeMqUri = "failover://(tcp://localhost.localdomain:61616)?jms.prefetchPolicy.all=0&startupMaxReconnectAttempts=1";
-		when(_mockProperties.getAmqUri())
-				.thenReturn(activeMqUri);
-
-		AlgorithmDefinition algoDef = new AlgorithmDefinition(ActionType.DETECTION, "TEST ALGO", "Algo Description", true,
-		                                                      true);
-
-		algoDef.getProvidesCollection().getAlgorithmProperties().add(
-				new PropertyDefinition("OVERRIDDEN ACTION PROPERTY", ValueType.STRING, "desc", "Bad Value"));
-		algoDef.getProvidesCollection().getAlgorithmProperties().add(
-				new PropertyDefinition("ALGO PROPERTY2", ValueType.STRING, "desc", "Algo Value2"));
-		algoDef.getProvidesCollection().getAlgorithmProperties().add(
-				new PropertyDefinition("OVERRIDDEN JOB PROPERTY", ValueType.STRING, "desc", "Bad Value"));
-		algoDef.getProvidesCollection().getAlgorithmProperties().add(
-				new PropertyDefinition("OVERRIDDEN STREAM PROPERTY", ValueType.STRING, "desc", "Bad Value"));
-
-		when(_mockPipelineService.getAlgorithm("TEST ALGO"))
-				.thenReturn(algoDef);
+    @Before
+    public void init() {
+        MockitoAnnotations.initMocks(this);
+        AggregateJobPropertiesUtil aggregateJobPropertiesUtil
+                = new AggregateJobPropertiesUtil(_mockProperties, _mockWorkflowPropertyService);
+        _messageSender = new StreamingJobMessageSenderImpl(_mockProperties, aggregateJobPropertiesUtil,
+                                                           _mockMasterNode, _mockServiceManager);
+    }
 
 
-		TransientAction action = new TransientAction(
-				"ActionName",
-				"Action description",
-				"TEST ALGO",
-				ImmutableMap.of("OVERRIDDEN ACTION PROPERTY", "ACTION VAL",
-				                "OVERRIDDEN JOB PROPERTY", "Bad Value"));
+    @Test
+    public void testLaunch() {
+        long stallAlertThreshold = 234;
+        when(_mockProperties.getStreamingJobStallAlertThreshold())
+                .thenReturn(stallAlertThreshold);
 
-		TransientStage stage = new TransientStage("StageName", "Stage description",
-		                                          ActionType.DETECTION, Collections.singletonList(action));
+        var activeMqUri = "failover://(tcp://localhost.localdomain:61616)?jms.prefetchPolicy.all=0&startupMaxReconnectAttempts=1";
+        when(_mockProperties.getAmqUri())
+                .thenReturn(activeMqUri);
 
-		TransientPipeline pipeline = new TransientPipeline("MyStreamingPipeline",
-		                                                   "Pipeline description",
-		                                                   Collections.singletonList(stage));
+        var workflowProp1 = new WorkflowProperty("WORKFLOW_PROP", "descr", ValueType.INT,
+                                                 "1", null, List.of(MediaType.VIDEO));
+        var workflowProp2 = new WorkflowProperty("OVERRIDDEN JOB PROPERTY", "descr", ValueType.STRING,
+                                                 "INVALID", null, List.of(MediaType.VIDEO));
+        when(_mockWorkflowPropertyService.getProperties(MediaType.VIDEO))
+                .thenReturn(ImmutableList.of(workflowProp1, workflowProp2));
+        when(_mockWorkflowPropertyService.getPropertyValue(workflowProp1.getName(), MediaType.VIDEO, null))
+                .thenReturn(workflowProp1.getDefaultValue());
+        when(_mockWorkflowPropertyService.getPropertyValue(workflowProp2.getName(), MediaType.VIDEO, null))
+                .thenReturn(workflowProp2.getDefaultValue());
 
-		TransientStream stream = new TransientStream(
-				5234,
-				"stream://myStream",
-				543,
-				ImmutableMap.of("OVERRIDDEN STREAM PROPERTY", "Stream Specific Value"),
-				ImmutableMap.of("mediaProp1", "mediaVal1"));
+        var algoProperties = List.of(
+                new AlgorithmProperty("OVERRIDDEN ACTION PROPERTY", "desc", ValueType.STRING,
+                                       "Bad Value", null),
+                new AlgorithmProperty("ALGO PROPERTY2", "desc", ValueType.STRING,
+                                       "Algo Value2", null),
+                new AlgorithmProperty("OVERRIDDEN JOB PROPERTY", "desc", ValueType.STRING,
+                                       "Bad Value", null),
+                new AlgorithmProperty("OVERRIDDEN STREAM PROPERTY", "desc", ValueType.STRING,
+                                       "Bad Value", null)
+        );
 
-		long jobId = 1234;
-		TransientStreamingJob job = new TransientStreamingJobImpl(
-				jobId,
-				"external id",
-				pipeline,
-				stream,
-				5,
-				100,
-				true,
-				"output-dir",
-				null,
-				null,
-				Collections.singletonMap("OVERRIDDEN JOB PROPERTY", "Job Overridden Value"),
-				Collections.emptyMap());
+        var algorithm = new Algorithm(
+                "TEST ALGO",
+                "Algo Description",
+                ActionType.DETECTION,
+                new Algorithm.Requires(List.of()),
+                new Algorithm.Provides(List.of(), algoProperties),
+                true,
+                true);
 
-		ArgumentCaptor<LaunchStreamingJobMessage> msgCaptor = ArgumentCaptor.forClass(LaunchStreamingJobMessage.class);
 
-		List<EnvironmentVariableModel> envVars = Arrays.asList(
-				new EnvironmentVariableModel("LD_LIB_PATH", "/opt/mpf", null),
-				new EnvironmentVariableModel("var2", "val2", null));
+        var actionProperties = List.of(
+                new ActionProperty("OVERRIDDEN ACTION PROPERTY", "ACTION VAL"),
+                new ActionProperty("OVERRIDDEN JOB PROPERTY", "Bad Value")
+        );
+        var action = new Action("ActionName", "Action description", algorithm.getName(),
+                                actionProperties);
 
-		StreamingServiceModel streamingServiceModel = new StreamingServiceModel(
-				"MyService", action.getAlgorithm(), ComponentLanguage.CPP,
-				"my-component/lib/libComponent.so", envVars);
+        var task = new Task("TaskName", "Task description",
+                             List.of(action.getName()));
 
-		when(_mockServiceManager.getServices())
-				.thenReturn(Arrays.asList(
-						new StreamingServiceModel(
-								"Wrong Service", "Wrong Algo", ComponentLanguage.JAVA, "bad-path/lib",
-								Collections.emptyList()),
-						streamingServiceModel));
+        var pipeline = new Pipeline("MyStreamingPipeline", "Pipeline description",
+                                    List.of(task.getName()));
+        var pipelineElements = new JobPipelineElements(
+                pipeline,
+                List.of(task),
+                List.of(action),
+                List.of(algorithm));
 
 
 
-		_messageSender.launchJob(job);
+        var stream = new MediaStreamInfo(
+                5234,
+                "stream://myStream",
+                543,
+                ImmutableMap.of("OVERRIDDEN STREAM PROPERTY", "Stream Specific Value"));
+
+        long jobId = 1234;
+        var job = new StreamingJobImpl(
+                jobId,
+                "external id",
+                pipelineElements,
+                stream,
+                5,
+                100,
+                true,
+                "output-dir",
+                null,
+                null,
+                Map.of("OVERRIDDEN JOB PROPERTY", "Job Overridden Value"),
+                Map.of());
+
+        var msgCaptor = ArgumentCaptor.forClass(LaunchStreamingJobMessage.class);
+
+        var envVars = List.of(
+                new EnvironmentVariableModel("LD_LIB_PATH", "/opt/mpf", null),
+                new EnvironmentVariableModel("var2", "val2", null));
+
+        var streamingServiceModel = new StreamingServiceModel(
+                "MyService", algorithm.getName(), ComponentLanguage.CPP,
+                "my-component/lib/libComponent.so", envVars);
+
+        when(_mockServiceManager.getServices())
+                .thenReturn(Arrays.asList(
+                        new StreamingServiceModel(
+                                "Wrong Service", "Wrong Algo", ComponentLanguage.JAVA, "bad-path/lib",
+                                List.of()),
+                        streamingServiceModel));
 
 
 
-		verify(_mockMasterNode)
-				.startStreamingJob(msgCaptor.capture());
-
-		LaunchStreamingJobMessage launchMessage = msgCaptor.getValue();
-
-		assertEquals(jobId, launchMessage.jobId);
-		assertEquals(stream.getUri(), launchMessage.streamUri);
-		assertEquals(stream.getSegmentSize(), launchMessage.segmentSize);
-		assertEquals(job.getStallTimeout(), launchMessage.stallTimeout);
-		assertEquals(stallAlertThreshold, launchMessage.stallAlertThreshold);
-		assertEquals(streamingServiceModel.getServiceName(), launchMessage.componentName);
-		assertEquals(streamingServiceModel.getLibraryPath(), launchMessage.componentLibraryPath);
-
-		assertEquals("val2", launchMessage.componentEnvironmentVariables.get("var2"));
-		assertEquals("/opt/mpf", launchMessage.componentEnvironmentVariables.get("LD_LIB_PATH"));
-
-		assertEquals("Algo Value2", launchMessage.jobProperties.get("ALGO PROPERTY2"));
-		assertEquals("ACTION VAL", launchMessage.jobProperties.get("OVERRIDDEN ACTION PROPERTY"));
-		assertEquals("Job Overridden Value", launchMessage.jobProperties.get("OVERRIDDEN JOB PROPERTY"));
-		assertEquals("Stream Specific Value", launchMessage.jobProperties.get("OVERRIDDEN STREAM PROPERTY"));
-
-
-		assertEquals("mediaVal1", launchMessage.mediaProperties.get("mediaProp1"));
-
-		assertEquals(activeMqUri, launchMessage.messageBrokerUri);
-		assertEquals(StreamingEndpoints.WFM_STREAMING_JOB_STATUS.queueName(), launchMessage.jobStatusQueue);
-		assertEquals(StreamingEndpoints.WFM_STREAMING_JOB_ACTIVITY.queueName(), launchMessage.activityAlertQueue);
-		assertEquals(StreamingEndpoints.WFM_STREAMING_JOB_SUMMARY_REPORTS.queueName(),
-		             launchMessage.summaryReportQueue);
-
-	}
+        _messageSender.launchJob(job);
 
 
 
-	@Test
-	public void testStop() {
-		long jobId = 1245;
-		_messageSender.stopJob(jobId);
+        verify(_mockMasterNode)
+                .startStreamingJob(msgCaptor.capture());
 
-		ArgumentCaptor<StopStreamingJobMessage> msgCaptor = ArgumentCaptor.forClass(StopStreamingJobMessage.class);
-		verify(_mockMasterNode)
-				.stopStreamingJob(msgCaptor.capture());
+        LaunchStreamingJobMessage launchMessage = msgCaptor.getValue();
 
-		StopStreamingJobMessage stopMessage = msgCaptor.getValue();
-		assertEquals(jobId, stopMessage.jobId);
-	}
+        assertEquals(jobId, launchMessage.jobId);
+        assertEquals(stream.getUri(), launchMessage.streamUri);
+        assertEquals(stream.getSegmentSize(), launchMessage.segmentSize);
+        assertEquals(job.getStallTimeout(), launchMessage.stallTimeout);
+        assertEquals(stallAlertThreshold, launchMessage.stallAlertThreshold);
+        assertEquals(streamingServiceModel.getServiceName(), launchMessage.componentName);
+        assertEquals(streamingServiceModel.getLibraryPath(), launchMessage.componentLibraryPath);
+
+        assertEquals("val2", launchMessage.componentEnvironmentVariables.get("var2"));
+        assertEquals("/opt/mpf", launchMessage.componentEnvironmentVariables.get("LD_LIB_PATH"));
+
+        assertEquals("Algo Value2", launchMessage.jobProperties.get("ALGO PROPERTY2"));
+        assertEquals("ACTION VAL", launchMessage.jobProperties.get("OVERRIDDEN ACTION PROPERTY"));
+        assertEquals("Job Overridden Value", launchMessage.jobProperties.get("OVERRIDDEN JOB PROPERTY"));
+        assertEquals("Stream Specific Value", launchMessage.jobProperties.get("OVERRIDDEN STREAM PROPERTY"));
+        assertEquals("1", launchMessage.jobProperties.get("WORKFLOW_PROP"));
+
+
+        assertEquals(activeMqUri, launchMessage.messageBrokerUri);
+        assertEquals(StreamingEndpoints.WFM_STREAMING_JOB_STATUS.queueName(), launchMessage.jobStatusQueue);
+        assertEquals(StreamingEndpoints.WFM_STREAMING_JOB_ACTIVITY.queueName(), launchMessage.activityAlertQueue);
+        assertEquals(StreamingEndpoints.WFM_STREAMING_JOB_SUMMARY_REPORTS.queueName(),
+                     launchMessage.summaryReportQueue);
+
+    }
+
+
+
+    @Test
+    public void testStop() {
+        long jobId = 1245;
+        _messageSender.stopJob(jobId);
+
+        var msgCaptor = ArgumentCaptor.forClass(StopStreamingJobMessage.class);
+        verify(_mockMasterNode)
+                .stopStreamingJob(msgCaptor.capture());
+
+        StopStreamingJobMessage stopMessage = msgCaptor.getValue();
+        assertEquals(jobId, stopMessage.jobId);
+    }
 }
